<resources>
    <string name="app_name">Password Memorizer</string>
    <string name="title_credential_detail">Pattern Detail</string>
    <string name="title_activity_credential_input">New Pattern</string>
    <string name="title_change_credential">Change Pattern</string>
    <string name="title_credentials">Patterns</string>
    <string name="button_create_credential">Create Pattern</string>
    <string name="button_change_credential">Update Pattern</string>
    <string name="title_delete_credential">Delete Pattern</string>
    <string name="message_delete_credential">Do you really want to delete this pattern with name \'%1$s\'?</string>
    <string name="credential_input_hints_explanation">Here you can select some characters to be revealed by click on them and enter the real character. This will help you to remember your password. The more characters you reveal the less you need to keep in mind. But remember, you shouldn\'t reveal too much, because you should remember your password by the pattern.</string>
    <string name="credential_input_name_explanation">Here you need to give your pattern a short name. Optionally you can enter an additional info text.</string>
    <string name="credential_input_pattern_explanation">You can enter your password and it will be transformed instantly to a pattern. If you don\'t want to type your password, you can also build the pattern by clicking the buttons for the character types.</string>
    <string name="credential_select_group_explanation">Optionally categorize your pattern.</string>
    <string name="credential_select_template_explanation">Select a template to be used for your pattern.</string>
    <string name="credential_intro_text1">Memorize your passwords with help of a unique pattern. Each character of your password is stored like this:</string>
    <string name="credential_intro_text2">Example:</string>
    <string name="credential_intro_text3">Click on the Plus-Button to create your first password pattern.</string>
    <string name="title_template_detail">Template Detail</string>
    <string name="title_activity_template_input">New Template</string>
    <string name="title_change_template">Change Template</string>
    <string name="title_templates">Templates</string>
    <string name="button_create_template">Create Template</string>
    <string name="button_change_template">Update Template</string>
    <string name="title_delete_template">Delete Template</string>
    <string name="message_delete_template">Do you really want to delete this template with name \'%1$s\'?</string>
    <string name="use_a_template_instead">Use a template instead</string>
    <string name="template_input_hints_explanation">Here you can select some characters to be placeholders or be revealed. Just click on them and enter the real character or let it empty.</string>
    <string name="template_input_name_explanation">Here you need to give your template a short name. Optionally you can enter an additional info text.</string>
    <string name="template_input_pattern_explanation">You can enter your password and it will be transformed instantly into a pattern. If you don\'t want to type your password, you can also build the pattern by clicking the buttons for the character types.</string>
    <string name="template_intro_text1">Templates are used to create new password patterns. If you have a base password which is adapted for each real password, you can use a template for that.</string>
    <string name="template_intro_text2">Click on the Plus-Button to create your first pattern template.</string>
    <string name="title_group_detail">Category Detail</string>
    <string name="title_activity_group_input">New Category</string>
    <string name="title_groups">Categories</string>
    <string name="title_change_group">Change Category</string>
    <string name="title_assign_group">Categorize </string>
    <string name="title_group_color">Set color for </string>
    <string name="button_create_group">Create Category</string>
    <string name="button_change_group">Update Category</string>
    <string name="title_delete_group">Delete Category</string>
    <string name="message_delete_group">Do you really want to delete this category with name \'%1$s\'?</string>
    <string name="no_group">-not categorized-</string>
    <string name="assign_to_group">Categorize</string>
    <string name="group_intro_text1">If you have a lot of password patterns, it can be become confusing. Here you can create and manage several categories. Go to the Patterns overview to associate your patterns with categories. You can also group your patterns by these categories.</string>
    <string name="group_intro_text2">Click on the Plus-Button to create your first pattern category.</string>
    <string name="group_colorize">Define a color for your category.</string>
    <string name="group_colorize_no_color">- no color -</string>
    <string name="change_color">Set color</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_info">Additional info</string>
    <string name="prompt_password">Pattern/Password</string>
    <string name="button_next_step">Next step</string>
    <string name="error_pattern_too_short">This pattern is too short</string>
    <string name="error_pattern_too_long">This pattern is too long</string>
    <string name="error_field_required">This field is required</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="hint">Reveal</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="group_items">Group by categories</string>
    <string name="lock_items">Lock patterns</string>
    <string name="legend">Show legend</string>
    <string name="help">Online Help</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="lower_char_explanation">Lower case letters</string>
    <string name="upper_char_explanation">Upper case letters</string>
    <string name="digit_explanation">Digits</string>
    <string name="special_char_explanation">Special characters</string>
    <string name="lower_char">a..z</string>
    <string name="upper_char">A..Z</string>
    <string name="digit">0..9</string>
    <string name="special_char">#/+..</string>
    <string name="search">Search</string>
    <string name="backspace">⌫</string>
    <string name="title_legend">Legend</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_security">Security</string>
    <string name="pref_title_enable_password">Ensure patterns with password</string>
    <string name="pref_description_enable_password">It is recommended to ensure your patterns with a password to prevent reading them by unauthorized people. </string>
    <string name="pattern_style">Pattern style</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_hide_patterns">Cover patterns in overview list</string>
    <string name="pref_description_hide_patterns">To prevent others seeing all your patterns in the overview lists, activate this option.</string>
    <string name="pref_header_backuprestore">Backup / Restore</string>
    <string name="title_encryption_password_required">Password required</string>
    <string name="message_encrypt_password_required">Please enter your password to encrypt your patterns.</string>
    <string name="title_set_revealed">Set revealed character</string>
    <string name="message_set_revealed">Maximum of revealed characters reached.</string>
    <string name="title_delete_revealed_character">Delete revealed character</string>
    <string name="message_delete_revealed_character">Sure delete not empty revealed character with number \'%1$s\'?</string>
    <string name="hint_tbd">t.b.d.</string>
    <string name="fill_hints">Please fill all revealed characters.</string>
    <string name="title_about_the_app">About the app</string>
    <string name="message_password_to_encrypt">Your password is used to encrypt all patterns. It is important to remember this password, there is no recovery. Wrong entered passwords will decrypt the patterns in a different way and only you should know how your patterns usually look like.</string>
    <string name="message_password_to_decrypt">Enter your password to disable pattern encryption. It is important to type it correctly, otherwise the patterns will be decrypted in a different way. This is not undo-able.</string>
    <string name="message_password_to_encrypt_single">Your password is used to encrypt all patterns. It is important to remember this password, there is no recovery. If you enable password checking, the password is encrypted and stored. Wrong entered passwords won\'t unlock the patterns. If you disable password checking, wrong entered passwords unlock the patterns, but in a different way and only you should know how your patterns usually look like.</string>
    <string name="message_password_to_decrypt_single">Enter your password to disable pattern encryption.</string>
    <string name="title_enter_password_for_encryption">Enter and confirm a password</string>
    <string name="title_enter_password_for_decryption">Enter your password</string>
    <string name="password_required">Password required</string>
    <string name="password_confirmation_required">Password confirmation required</string>
    <string name="password_not_equal">Password not equal</string>
    <string name="nothing_revealed">Nothing revealed</string>
    <string name="wrong_password">Wrong password</string>
    <string name="store_password_hint">Enable password checking (strong password recommended)</string>
    <string name="disturb_equal_patterns">Distort equal patterns (strong password recommended)</string>
    <string name="not_supported">This feature is not supported for your Android version.</string>
    <string name="pref_title_backup">Backup your data</string>
    <string name="pref_description_backup">All your pattern, templates and groups are stored in a file which can be backed up to a save store of your choice. You can also use this file to migrate your data to another device.</string>
    <string name="pref_title_restore">Restore your data</string>
    <string name="pref_description_restore">You can restore all patterns, templates and groups you have previously backed up. Use this to migrate your data between devices or to restore your data.</string>
    <string name="title_backup_dialog">Backup your data</string>
    <string name="message_backup_dialog_encrypted">Enter your password to backup your data. This must be the same password as you encrypted your data. It is important to type it correctly, otherwise the patterns will be exported in a different way. This password is also needed to restore the backup file on any device.</string>
    <string name="message_backup_dialog_encrypted_single">Your data is encrypted, please enter your password to backup your data. This password is also needed to restore the backup file on any device.</string>
    <string name="message_backup_dialog_noenc">Your data is not encrypted, so the backup data will also not be encrypted. Be careful with the backup file.</string>
    <string name="title_restore_dialog">Restore backup file from %1$s</string>
    <string name="message_restore_dialog_encrypted">Enter the password of the backup file to restore your data. It is important to type it correctly, otherwise the patterns will be restored in a different way. %1$d patterns, %2$d templates and %3$d groups are going to be imported.</string>
    <string name="message_restore_dialog_noenc">%1$d patterns, %2$d templates and %3$d groups are going to be imported.</string>
</resources>