<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.template.input.TemplateInputPatternActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:text="@string/template_input_pattern_explanation"/>

            <EditText
                android:id="@+id/template_builder_editview"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:letterSpacing="0.1"
                android:textAlignment="center"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:textIsSelectable="true"
                android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/button_pattern_lower_case"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/lower_char"
                    android:textAllCaps="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_pattern_upper_case"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/upper_char"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_pattern_digit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:text="@string/digit"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_pattern_special_char"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/special_char"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_pattern_backspace"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/backspace"
                    android:textSize="24sp"/>


            </LinearLayout>

            <Button
                android:id="@+id/template_next_step"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_next_step"
                android:background="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>